--- a/Seizure_Detection.ipynb
+++ b/Seizure_Detection.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM2kk/OgtbIMPNA03rAi6Y5",
+      "authorship_tag": "ABX9TyO+W1n96w+AxBpsgekf2gUD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3538,41 +3538,30 @@
         "# reshape numpy array as we are predicting from one data point\n",
         "input_data_reshaped = input_data_as_numpy_array.reshape(1, -1)\n",
         "\n",
-        "# standardizing the input data\n",
-        "input_data_std = scaler.transform(input_data_reshaped)\n",
-        "prediction = model.predict(input_data_std)\n",
+        "prediction = model.predict(input_data_reshaped)\n",
         "print(prediction)\n",
         "\n",
-        "if (prediction[0] == 0):\n",
-        "  print(\"The patient has no Seizure\")\n",
+        "if (prediction[0][0] == 1):\n",
+        "  print(\"The patient has  Seizure\")\n",
         "else:\n",
-        "  print(\"The patient has seizure\")"
+        "  print(\"The patient has no seizure\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "nEn7eY4JlYpF",
-        "outputId": "315595a9-a40a-47fa-c2c7-40c43703f94c"
+        "outputId": "15db88ed-74e4-461c-abdf-7e398c71dade"
       },
-      "execution_count": 258,
+      "execution_count": 263,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/sklearn/base.py:439: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
-            "  warnings.warn(\n",
-            "WARNING:tensorflow:5 out of the last 12 calls to <function Model.make_predict_function.<locals>.predict_function at 0x7ff8211b08b0> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n"
-          ]
-        },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1/1 [==============================] - 0s 62ms/step\n",
-            "[[0.81983155]]\n",
-            "The patient has seizure\n"
+            "1/1 [==============================] - 0s 20ms/step\n",
+            "[[1.]]\n",
+            "The patient has  Seizure\n"
           ]
         }
       ]
